2014-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.11

	* inst/examples/*/Makefile: Note that Rcpp (>= 0.11.0) no longer
	requires the RCPPLIBS variable

	* doxyfile (STRIP_FROM_PATH): Update for git repo

2014-02-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Move Rcpp (>= 0.11.0) from Depends: to Imports:
	* NAMESPACE: Added importFrom(Rcpp, evalCpp)

	* .Rbuildignore: Added .travis.yml and doxyfile

	* src/RInside.cpp: Added --vanilla --slave to default arguments

	* src/Makefile: PKG_LIBS no longer points to Rcpp's library
	* inst/examples/standard/Makefile: Note that Rcpp (>= 0.11.0) no
	longer requires the RCPPLIBS variable

	* inst/examples/standard/rinside_test0.cpp: Minor tweaks
	* inst/examples/standard/rinside_sample9.cpp: In this
	already-disabled example, comment out a data structure no longer
	provided by Rcpp

2014-02-05  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/RInside.h: Make global_env_m a pointer to avoid
	the default constructor initializing it before R has actually
	been called
	* src/RInside.cpp: ditto

2013-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added

2013-08-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/qtdensity.h: Added a few more explicit #include
	statements which Qt 5.1 now appears to require -- with thanks to
	Spencer Behling for the patch
	* inst/examples/qt/qtdensity.h: Moved one #include to header file

2013-04-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/armadillo/rinside_arma0.cpp: Reverse order of
	includes so that RcppArmadillo.h is included before RInside
	* inst/examples/armadillo/rinside_arma1.cpp: Idem

2013-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: Set default value of loadRcpp to true

	* src/RInside.cpp: Assign R's global env. only after R has been
	loaded, also load Rcpp unconditionally

2013-01-23  Dirk Eddelbuettel  <edd@debian.org>
